banner part done

--- a/index.html
+++ b/index.html
@@ -11,62 +11,75 @@
 </head>
 
 <body>
-    <header class="total-head">
-        <div class="background">
-            <div class="head-text">
-                <h1> The Greatest <br> show on<br> the earth</h1>
-            </div>
-            <div class="image">
-                <img src="assets/Banner Image.png" alt="">
+    <!-- Top banner -->
+    <header class="banner">
+        <div class="header-text">
+            <div class="banner-text">
+                <h1>The Greatest Show on the Earth</h1>
+                <p>Wellcome to the biggest event of
+                    Fifa World cup 2022 Qatar</p>
+                <button>Watch Live</button>
             </div>
         </div>
-
-
+        <div class="banner-image">
+            <img src="assets/Banner Image.png" alt="">
+        </div>
     </header>
     <main>
+        <!-- blog item and navigation menu container -->
         <div class="container">
+
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut consequuntur recusandae magni non, iusto
-                    soluta amet debitis quaerat hic animi esse tenetur sit autem tempora officia optio! Excepturi, enim
-                    voluptas!</p>
-                <i class="fa-light fa-clock"></i>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
             </div>
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, modi animi, voluptas, debitis
-                    dolor sit odio eum tempore minus voluptatibus culpa? Temporibus dolore at ipsa dolor voluptatum
-                    architecto aliquam modi.</p>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.</p>
                 <a href="assets/Time Icon.png">10h</a>
                 <a href="assets/Chat Icon.png">23</a>
             </div>
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>lorem10</p>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.</p>
                 <a href="assets/Time Icon.png">10h</a>
                 <a href="assets/Chat Icon.png">23</a>
             </div>
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>lorem10</p>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.</p>
                 <a href="assets/Time Icon.png">10h</a>
                 <a href="assets/Chat Icon.png">23</a>
             </div>
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>lorem10</p>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.</p>
                 <a href="assets/Time Icon.png">10h</a>
                 <a href="assets/Chat Icon.png">23</a>
             </div>
             <div class="blog">
                 <img src="assets/Blog Image.png" alt="">
                 <button>Transfer</button>
-                <p>lorem10</p>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.</p>
                 <a href="assets/Time Icon.png">10h</a>
                 <a href="assets/Chat Icon.png">23</a>
             </div>
@@ -74,5 +87,30 @@
 
     </main>
 </body>
+<!-- Bottom footer properties -->
+<footer class="footer-title">
+    <h3 class="footer-logo">GOAL</h3>
+    </div>
+    <div class="footer-option">
+        <div class="option-1 footer-space">
+            <h5>Contact us</h5>
+        </div>
+        <div class="option-2 footer-space">
+            <h5>Terms of services</h5>
+        </div>
+        <div class="option-3 footer-space">
+            <h5>Privacy policy</h5>
+        </div>
+        <div class="option-4 footer-space">
+            <h5>Privacy settings</h5>
+        </div>
+        <div class="option-5 footer-space">
+            <h5>Goal App</h5>
+        </div>
+        <div class="option-6 footer-space">
+            <h5>Goal Live</h5>
+        </div>
+
+</footer>
 
 </html>
