hero are button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>The Greatest Show on the Earth</h1>
                 <p>Wellcome to the biggest event of
                     Fifa World cup 2022 Qatar</p>
-                <button>Watch Live</button>
+                <div class="hero-area-button"><a class="hero-button" href="#">Watch Live</a></div>
             </div>
         </div>
         <div class="banner-image">
