blog item edited

--- a/index.html
+++ b/index.html
@@ -12,25 +12,28 @@
 
 <body>
     <!-- Top banner -->
-    <header class="banner">
-        <div class="header-text">
-            <div class="banner-text">
-                <h1>The Greatest Show on the Earth</h1>
-                <p>Wellcome to the biggest event of
-                    Fifa World cup 2022 Qatar</p>
-                <div class="hero-area-button"><a class="hero-button" href="#">Watch Live</a></div>
+    <header class="banner container">
+        <div class="banner-main">
+            <div class="header-text">
+                <div class="banner-text">
+                    <h1>The Greatest Show on the Earth</h1>
+                    <p>Wellcome to the biggest event of
+                        Fifa World cup 2022 Qatar</p>
+                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live</a></div>
+                </div>
+            </div>
+            <div class="banner-image">
+                <img src="assets/Banner Image.png" alt="">
             </div>
         </div>
-        <div class="banner-image">
-            <img src="assets/Banner Image.png" alt="">
-        </div>
     </header>
-    <main>
-        <!-- blog item and navigation menu container -->
-        <div class="container">
 
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
+    <!-- blog item and navigation menu container -->
+    <div class="blog-main container">
+
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
                     in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
@@ -38,79 +41,89 @@
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
             </div>
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
+        </div>
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
                     in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.</p>
-                <a href="assets/Time Icon.png">10h</a>
-                <a href="assets/Chat Icon.png">23</a>
-            </div>
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.</p>
-                <a href="assets/Time Icon.png">10h</a>
-                <a href="assets/Chat Icon.png">23</a>
-            </div>
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.</p>
-                <a href="assets/Time Icon.png">10h</a>
-                <a href="assets/Chat Icon.png">23</a>
-            </div>
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.</p>
-                <a href="assets/Time Icon.png">10h</a>
-                <a href="assets/Chat Icon.png">23</a>
-            </div>
-            <div class="blog">
-                <img src="assets/Blog Image.png" alt="">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.</p>
-                <a href="assets/Time Icon.png">10h</a>
-                <a href="assets/Chat Icon.png">23</a>
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
             </div>
         </div>
-
-    </main>
-</body>
-<!-- Bottom footer properties -->
-<footer class="footer-title">
-    <h3 class="footer-logo">GOAL</h3>
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
+                <button>Transfer</button>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+            </div>
+        </div>
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
+                <button>Transfer</button>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+            </div>
+        </div>
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
+                <button>Transfer</button>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+            </div>
+        </div>
+        <div class="blog">
+            <img src="assets/Blog Image.png" alt="">
+            <div class="blog-item">
+                <button>Transfer</button>
+                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
+                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
+                    the Blaugrana.
+                </p>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+            </div>
+        </div>
     </div>
-    <div class="footer-option">
-        <div class="option-1 footer-space">
-            <h5>Contact us</h5>
-        </div>
-        <div class="option-2 footer-space">
-            <h5>Terms of services</h5>
-        </div>
-        <div class="option-3 footer-space">
-            <h5>Privacy policy</h5>
-        </div>
-        <div class="option-4 footer-space">
-            <h5>Privacy settings</h5>
-        </div>
-        <div class="option-5 footer-space">
-            <h5>Goal App</h5>
-        </div>
-        <div class="option-6 footer-space">
-            <h5>Goal Live</h5>
-        </div>
 
-</footer>
+    <!-- Bottom footer properties -->
+    <footer class="footer-title">
+        <h3 class="footer-logo">GOAL</h3>
+        </div>
+        <div class="footer-option">
+            <div class="option-1 footer-space">
+                <h5>Contact us</h5>
+            </div>
+            <div class="option-2 footer-space">
+                <h5>Terms of services</h5>
+            </div>
+            <div class="option-3 footer-space">
+                <h5>Privacy policy</h5>
+            </div>
+            <div class="option-4 footer-space">
+                <h5>Privacy settings</h5>
+            </div>
+            <div class="option-5 footer-space">
+                <h5>Goal App</h5>
+            </div>
+            <div class="option-6 footer-space">
+                <h5>Goal Live</h5>
+            </div>
+
+    </footer>
+</body>
 
 </html>
