--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="blog-main container">
 
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -40,10 +40,11 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -51,10 +52,11 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -62,10 +64,11 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -73,10 +76,11 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -84,10 +88,11 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
         <div class="blog">
-            <img src="assets/Blog Image.png" alt="">
+            <img src="assets/lewa.png" alt="">
             <div class="blog-item">
                 <button>Transfer</button>
                 <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
@@ -95,6 +100,7 @@
                     the Blaugrana.
                 </p>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-message"></i> 23</span>
             </div>
         </div>
     </div>
