--- a/index.html
+++ b/index.html
@@ -29,78 +29,75 @@
     </header>
 
     <!-- blog item and navigation menu container -->
-    <div class="blog-main container">
+    <div class="blog-container-main container">
+        <div class="blog-sidebar">
+            <div class="sidebar-card">
+                <div class="sidebar-button-main"><a class="sidebar-button" href="">Upcoming match</a></div>
+                <div class="sidebar-button-main"><a class="sidebar-button" href="">All Group</a></div>
+                <div class="sidebar-button-main"><a class="sidebar-active" href="">Blog</a></div>
+            </div>
+        </div>
+        <div class="blog-main ">
 
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
-        </div>
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
-        </div>
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
-        </div>
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
-        </div>
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
-        </div>
-        <div class="blog">
-            <img src="assets/lewa.png" alt="">
-            <div class="blog-item">
-                <button>Transfer</button>
-                <p>Lewandowski was finally granted his wish earlier this week when Bayern allowed him to join Barcelona
-                    in a deal worth up to €50million including add-ons, as the striker penned a four-year contract with
-                    the Blaugrana.
-                </p>
-                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                <span><i class="fa-regular fa-message"></i> 23</span>
+            <div class="blog">
+                <img src="assets/lewa.png" alt="">
+                <div class="blog-item">
+                    <button>Transfer</button>
+                    <p>Lewandowski was finally granted his wish earlier...
+                    </p>
+                    <span><i class="fa-regular fa-clock"></i> 10h</span>
+                    <span><i class="fa-regular fa-message"></i> 23</span>
+                </div>
             </div>
         </div>
     </div>
