second section and upcoming section done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
     <script src="https://kit.fontawesome.com/49bbf161ba.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,9 +32,9 @@
     <div class="blog-container-main container">
         <div class="blog-sidebar">
             <div class="sidebar-card">
-                <div class="sidebar-button-main"><a class="sidebar-button" href="">Upcoming match</a></div>
-                <div class="sidebar-button-main"><a class="sidebar-button" href="">All Group</a></div>
-                <div class="sidebar-button-main"><a class="sidebar-active" href="">Blog</a></div>
+                <a class="sidebar-button" href="upcoming-match.html">Upcoming match</a>
+                <a class="sidebar-button" href="">All Group</a>
+                <a class="sidebar-active" href="index.html">Blog</a>
             </div>
         </div>
         <div class="blog-main ">
