--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <!-- Bottom footer properties -->
-    <footer class="footer-title">
+    <footer class="footer-title container">
         <h3 class="footer-logo">GOAL</h3>
         </div>
         <div class="footer-option">
