--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -133,6 +133,9 @@
             <div class="option-6 footer-space">
                 <h5>Goal Live</h5>
             </div>
+            <span><i class="fa-brands fa-instagram"></i></span>
+            <span><i class="fa-brands fa-linkedin"></i></span>
+            <span><i class="fa-brands fa-youtube"></i></span>
 
     </footer>
 </body>
