responsive tab view

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         <div class="blog-main ">
 
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
+
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -50,7 +54,9 @@
                 </div>
             </div>
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -60,7 +66,9 @@
                 </div>
             </div>
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -70,7 +78,9 @@
                 </div>
             </div>
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -80,7 +90,9 @@
                 </div>
             </div>
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -90,7 +102,9 @@
                 </div>
             </div>
             <div class="blog">
-                <img src="assets/lewa.png" alt="">
+                <div class="blog-image">
+                    <img src="assets/lewa.png" alt="">
+                </div>
                 <div class="blog-item">
                     <button>Transfer</button>
                     <p>Lewandowski was finally granted his wish earlier...
@@ -101,9 +115,10 @@
             </div>
         </div>
     </div>
-
+    <div class="view-all-button container"><a class="hero-button" href="#">View All</a>
+    </div>
     <!-- Bottom footer properties -->
-    <footer class="footer-title container">
+    <footer class="footer-main">
         <h3 class="footer-logo">GOAL</h3>
         </div>
         <div class="footer-option">
