mobile view added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <!-- Top banner -->
     <header class="banner container">
         <div class="banner-main">
@@ -28,120 +29,127 @@
         </div>
     </header>
 
-    <!-- blog item and navigation menu container -->
-    <div class="blog-container-main container">
-        <div class="blog-sidebar">
-            <div class="sidebar-card">
-                <a class="sidebar-button" href="upcoming-match.html">Upcoming match</a>
-                <a class="sidebar-button" href="">All Group</a>
-                <a class="sidebar-active" href="index.html">Blog</a>
+    <div class="topbar">
+        <div class="top-button-container"><a class="top-button" href="">Upcoming Match</a>
+            <a class="top-button" href="">All Group</a>
+            <a class="top-active-button" href="">Blog</a>
+        </div>
+
+
+
+        <!-- blog item and navigation menu container -->
+        <div class="blog-container-main container">
+            <div class="blog-sidebar">
+                <div class="sidebar-card">
+                    <a class="sidebar-button" href="upcoming-match.html">Upcoming match</a>
+                    <a class="sidebar-button" href="">All Group</a>
+                    <a class="sidebar-active" href="index.html">Blog</a>
+                </div>
+            </div>
+            <div class="blog-main ">
+
+                <div class="blog">
+
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-image">
+                        <img src="assets/lewa.png" alt="">
+                    </div>
+                    <div class="blog-item">
+                        <button>Transfer</button>
+                        <p>Lewandowski was finally granted his wish earlier...
+                        </p>
+                        <span><i class="fa-regular fa-clock"></i> 10h</span>
+                        <span><i class="fa-regular fa-message"></i> 23</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="blog-main ">
-
-            <div class="blog">
-
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
-            <div class="blog">
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
-            <div class="blog">
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
-            <div class="blog">
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
-            <div class="blog">
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
-            <div class="blog">
-                <div class="blog-image">
-                    <img src="assets/lewa.png" alt="">
-                </div>
-                <div class="blog-item">
-                    <button>Transfer</button>
-                    <p>Lewandowski was finally granted his wish earlier...
-                    </p>
-                    <span><i class="fa-regular fa-clock"></i> 10h</span>
-                    <span><i class="fa-regular fa-message"></i> 23</span>
-                </div>
-            </div>
+        <div class="view-all-button container"><a class="hero-button" href="#">View All</a>
         </div>
-    </div>
-    <div class="view-all-button container"><a class="hero-button" href="#">View All</a>
-    </div>
-    <!-- Bottom footer properties -->
-    <footer class="footer-main">
-        <h3 class="footer-logo">GOAL</h3>
-        </div>
-        <div class="footer-option">
-            <div class="option-1 footer-space">
-                <h5>Contact us</h5>
-            </div>
-            <div class="option-2 footer-space">
-                <h5>Terms of services</h5>
-            </div>
-            <div class="option-3 footer-space">
-                <h5>Privacy policy</h5>
-            </div>
-            <div class="option-4 footer-space">
-                <h5>Privacy settings</h5>
-            </div>
-            <div class="option-5 footer-space">
-                <h5>Goal App</h5>
-            </div>
-            <div class="option-6 footer-space">
-                <h5>Goal Live</h5>
-            </div>
+        <!-- Bottom footer properties -->
+        <footer class="footer-main">
+            <h3 class="footer-logo">GOAL</h3>
+            <div class="footer-option">
+                <div class="option-1 footer-space">
+                    <h5>Contact us</h5>
+                </div>
+                <div class="option-2 footer-space">
+                    <h5>Terms of services</h5>
+                </div>
+                <div class="option-3 footer-space">
+                    <h5>Privacy policy</h5>
+                </div>
+                <div class="option-4 footer-space">
+                    <h5>Privacy settings</h5>
+                </div>
+                <div class="option-5 footer-space">
+                    <h5>Goal App</h5>
+                </div>
+                <div class="option-6 footer-space">
+                    <h5>Goal Live</h5>
+                </div>
 
-    </footer>
+        </footer>
 </body>
 
 </html>
