--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <h1>The Greatest Show on the Earth</h1>
                     <p>Wellcome to the biggest event of
                         Fifa World cup 2022 Qatar</p>
-                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live</a></div>
+                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live <i
+                                class="fa-solid fa-angle-right"></i></a></div>
                 </div>
             </div>
             <div class="banner-image">
@@ -129,25 +130,32 @@
         <!-- Bottom footer properties -->
         <footer class="footer-main">
             <h3 class="footer-logo">GOAL</h3>
+            <hr>
             <div class="footer-option">
-                <div class="option-1 footer-space">
+                <div class="footer-space">
                     <h5>Contact us</h5>
                 </div>
-                <div class="option-2 footer-space">
+                <div class=" footer-space">
                     <h5>Terms of services</h5>
                 </div>
-                <div class="option-3 footer-space">
+                <div class="footer-space">
                     <h5>Privacy policy</h5>
                 </div>
-                <div class="option-4 footer-space">
+                <div class="footer-space">
                     <h5>Privacy settings</h5>
                 </div>
-                <div class="option-5 footer-space">
+                <div class="footer-space">
                     <h5>Goal App</h5>
                 </div>
                 <div class="option-6 footer-space">
                     <h5>Goal Live</h5>
                 </div>
+                <div class="social icon">
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+                </div>
+
 
         </footer>
 </body>
