--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -110,32 +110,34 @@
 
 
     <!-- Bottom footer properties -->
-    <footer class="footer-title container">
+    <footer class="footer-main">
         <h3 class="footer-logo">GOAL</h3>
-        </div>
+        <hr>
         <div class="footer-option">
-            <div class="option-1 footer-space">
+            <div class="footer-space">
                 <h5>Contact us</h5>
             </div>
-            <div class="option-2 footer-space">
+            <div class=" footer-space">
                 <h5>Terms of services</h5>
             </div>
-            <div class="option-3 footer-space">
+            <div class="footer-space">
                 <h5>Privacy policy</h5>
             </div>
-            <div class="option-4 footer-space">
+            <div class="footer-space">
                 <h5>Privacy settings</h5>
             </div>
-            <div class="option-5 footer-space">
+            <div class="footer-space">
                 <h5>Goal App</h5>
             </div>
             <div class="option-6 footer-space">
                 <h5>Goal Live</h5>
             </div>
-            <span><i class="fa-brands fa-instagram"></i></span>
-            <span><i class="fa-brands fa-linkedin"></i></span>
-            <span><i class="fa-brands fa-youtube"></i></span>
-
+        </div>
+        <div class="social-icon">
+            <a class="icon" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="icon" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a class="icon" href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+        </div>
     </footer>
 </body>
 
