live button icon changed ofr watch button

--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -19,7 +19,8 @@
                     <h1>The Greatest Show on the Earth</h1>
                     <p>Wellcome to the biggest event of
                         Fifa World cup 2022 Qatar</p>
-                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live</a></div>
+                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live <i
+                                class="fa-solid fa-angle-right"></i></a></div>
                 </div>
             </div>
             <div class="banner-image">
