watch live button link connected

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <h1>The Greatest Show on the Earth</h1>
                     <p>Wellcome to the biggest event of
                         Fifa World cup 2022 Qatar</p>
-                    <div class="hero-area-button"><a class="hero-button" href="#">Watch Live <i
+                    <div class="hero-area-button"><a class="hero-button"
+                            href="https://www.youtube.com/watch?v=Vw34wMAqWzc">Watch Live <i
                                 class="fa-solid fa-angle-right"></i></a></div>
                 </div>
             </div>
